--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -13,6 +13,11 @@
 - type: rss
   icon: "fas fa-rss"
   noblank: true
+
+- type: instagram
+  icon: "fab fa-instagram"
+  noblank: true
+  
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
