--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: 안우진의 기록용 블로그 # the main title
 tagline: woojeans' blog # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  컴퓨터 공학, it, 안우진
+  컴퓨터 공학, it, 블로그
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
